# telegram-protected-media-forwarder

./: .env.example  .gitignore  Dockerfile  EASY_INSTALLATION_STEPS.txt  LICENSE  README.md  config.ini.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_wizard.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: settings.py
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  TROUBLESHOOTING.md
services/: forward_service.py
telegram/: client.py  downloader.py  uploader.py
tests/: test_cli.py  test_config.py  test_downloader.py  test_forward.py  test_helpers.py
utils/: helpers.py  logger.py
